[package]
name = "mulimuli"
version = "0.1.0"
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { path = "../../binding-macro" }
protocol = { path = "../../protocol", package = "muta-protocol" }

ckb-types = { git = "https://github.com/TheWaWaR/ckb", branch = "add-tx-merkle-proof-rpc" }
ckb-jsonrpc-types = { git = "https://github.com/TheWaWaR/ckb", branch = "add-tx-merkle-proof-rpc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"
hex = "0.4"
molecule = "0.5"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { path = "../../framework" }
